Fix image in header
Changed object-fit for the image so that it doesn't get distorted
proportions when shrinking the window.

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ body {
 .header-pic {
     height: 100%;
     max-width: 500px;
-    object-fit: fill;
+    object-fit: cover;
     flex: 1 1 auto;
 }
 
